# opengl-tests

./: .gitignore  CMakeLists.txt
include/: camera.h  shader.h  square.h  window.h
include/glad/: glad.h
src/: 3d.cpp  fragment.fs  glad.c  glmtest.cpp  hello-triangle.cpp  lighting.cpp  main.cpp  shader.cpp  square.cpp  vertex.vs  water.cpp
src/shaders/: box.fs  box.vs  cube.fs  light.fs  light.vs  square.fs  water.fs  water.vs
